Solved problems related to alignment and font size. Note: not recommended to make changes to bootstrap css cerulean. Reverted file and separated to index.css.

--- a/static/stylesheets/bootstrap.cerulean.css
+++ b/static/stylesheets/bootstrap.cerulean.css
@@ -1,4 +1,4 @@
-   @import url(https://fonts.googleapis.com/css?family=Telex);
+@import url(https://fonts.googleapis.com/css?family=Telex);
 /*!
  * Bootstrap v2.2.1
  *
@@ -3494,7 +3494,7 @@ input[type="submit"].btn.btn-mini {
 }
 .navbar {
   overflow: visible;
-  margin-bottom: 0px;
+  margin-bottom: 20px;
   color: #f5f5f5;
   *position: relative;
   *z-index: 2;
@@ -5284,80 +5284,4 @@ i[class^="icon-"] {
 .affix {
   position: fixed;
 }
-.front{
-  
-  background: url("../images/woman_yoga.png");
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-}
-
-.text-over-opaque{
-  text-align:left;
-  color: #F7F7F7;
-  letter-spacing: 2px;
-  margin-left:5px;
-  margin-right:5px;
-}
-.text-centered{
-  text-align:center;
-}
-
-.header-over-opaque{
-  letter-spacing: 1px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-shadow: 0 1px 0 rgba(255,255, 255, .5);
-  color: #3fb4f7;
-}
-
-.left-column{
-    margin-top: 15%;
-}
-.right-column{
-    margin-top: 1%;
-}
-.bottom{
-    margin-top: 5%;
-}
-
-.text-over-image-clear{
-  text-shadow: 0 1px 0 rgba(200,200, 200, 0.75);
-    color: #FFFFFF;
-}
-
-.large-text {
-  text-color: rgba(0, 0, 0, .7);
-  font-size: 80px;
-  padding-bottom: 30px;
-  padding-bottom: 30px;
-}
-
-.text-over-image-clear{
-  text-shadow: 0 1px 0 rgba(255,255, 255, 0.75);
-  color: #111111;
-}
-
-
-
-.simple-box {            
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  font-size:17px;
-  margin-left:10px;
-  margin-right:10px;
-  background-color: black;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#FFFFFF), to(#FFFFFF));
-  background-image: -webkit-linear-gradient(to bottom, #FFFFFF, #DDDDDD);
-  background-image: -o-linear-gradient(to bottom, #FFFFFF, #DDDDDD);
-  background-image: -moz-linear-gradient(to bottom, #FFFFFF, #DDDDDD);
-  background-image: linear-gradient(to bottom, #FFFFFF, #000000);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#111111), to(#333333));
-  background-image: -webkit-linear-gradient(to bottom, #111111, #333333);
-  background-image: -o-linear-gradient(to bottom, #111111, #333333);
-  background-image: -moz-linear-gradient(to bottom, #111111, #333333);
-  background-image: linear-gradient(to bottom, #111111, #333333);
-  background: rgb(54, 25, 25); /* Fall-back for browsers that don't support rgba */
-  background: rgba(0, 0, 0, .7);
-  }
 
